recording capabilities and bug fixes